--- a/index.html
+++ b/index.html
@@ -20,6 +20,25 @@
 </head>
 
 <body>
+     <!-- full page section -->
+    <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12 headerbg">
+        <div class="container">
+            <div class="row">
+                <!-- left section -->
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 wow slideInLeft">
+                    <center><img src="img/logo.png" class="logo" /></center>
+                    <center>
+                        <h1> My Super Awesome App </h1>
+                        <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </center>
+                </div>
+                <!-- right section -->
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 wow slideInRight">
+                    <center><img src="img/iphonex.png" class="imgright"></center>
+                </div>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
