--- a/index.html
+++ b/index.html
@@ -39,6 +39,51 @@
             </div>
         </div>
     </div>
+    <!-- gallery -->
+    <div class="jumbotron col-md-12 col-xs-12 col-sm-12 col-lg-12 gallery text-center">
+        <div class="container">
+            <div class="row mb-4">
+                <div class="col align-self-center">
+                    <h3><b>Gallery</b></h3>
+                    <hr>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col align-self-center">
+                    <div id="carouselExampleIndicators" class="carousel slide wow bounceInUp" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img class="d-block " src="img/2.jpg" alt="First slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block " src="img/5.jpg" alt="Second slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block " src="img/4.jpg" alt="Third slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block " src="img/3.jpg" alt="Fourth slide">
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+   					 <span class="sr-only">Previous</span>
+  					</a>
+                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+						    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+						    <span class="sr-only">Next</span>
+						  </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
