--- a/index.html
+++ b/index.html
@@ -84,6 +84,15 @@
             </div>
         </div>
     </div>
+    <!-- features -->
+    <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12 features text-center">
+        <div class="container">
+        	<div class="row mb-4">
+                <div class="col align-self-center">
+                    <h3><b>Features</b></h3>
+                    <hr>
+                </div>
+            </div>
     
 </body>
 </html>
