--- a/index.html
+++ b/index.html
@@ -93,6 +93,14 @@
                     <hr>
                 </div>
             </div>
+            <div class="row">
+            	<div class="card text-white bg-primary mb-3 wow wobble" style="max-width: 25rem;">
+				  <div class="card-body">
+				    <h5 class="card-title">Card title</h5>
+				    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+				    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+				  </div>
+				</div>
     
 </body>
 </html>
