--- a/index.html
+++ b/index.html
@@ -100,7 +100,42 @@
 				    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
 				    <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta saepe eveniet omnis eius fugit ut sequi nobis voluptatem at quia, esse aliquid error, perferendis veritatis optio, tempora sit facere aliquam.</p>
 				  </div>
+                </div>
+                <div class="card text-white bg-primary mb-3 wow wobble" style="max-width: 25rem;">
+				  <div class="card-body">
+				    <h5 class="card-title">Card title</h5>
+				    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+				    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+				  </div>
 				</div>
+			</div>
+			<div class="row">
+            	<div class="card text-white bg-primary mb-3 wow wobble" style="max-width: 25rem;">
+				  <div class="card-body">
+				    <h5 class="card-title">Card title</h5>
+				    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+				    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+				  </div>
+				</div>
+				<div class="card text-white bg-primary mb-3 wow wobble" style="max-width: 25rem;">
+				  <div class="card-body">
+				    <h5 class="card-title">Card title</h5>
+				    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+				    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+				  </div>
+				</div>
+			</div>
+        </div>
+    </div>
+    <!-- download -->
+    <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12 download text-center">
+    	<div class="container">
+    		<div class="row">
+    			<div class="col align-self-center mb-5">
+    				<h3><b>Download Now</b></h3>
+    				<hr>
+    				<p class="tagline">Available for iOS and Android</p>
+    			</div>
     
 </body>
 </html>
