--- a/index.html
+++ b/index.html
@@ -135,7 +135,57 @@
     				<h3><b>Download Now</b></h3>
     				<hr>
     				<p class="tagline">Available for iOS and Android</p>
+                </div>
+                </div>
+    		<div class="row">
+    			<div class="col align-self-center mb-5 wow fadeInUp">
+    				<a href="itunes.com" class="mr-5 downloadbtn"><img src="img/apple.png"></a>
+    				<a href="play.google.com" class="downloadbtn"><img src="img/android.png"></a>
     			</div>
+    		</div>
+
+
+    	</div>
+    </div>
+    <!-- footer section -->
+    <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12 footer text-center">
+    	<div class="container">
+    		<div class="row">
+    			<div class="col-md-4 col-sm-4 col-lg-4"></div>
+    			<div class="col-md-4 col-sm-4 col-lg-4 wow bounceInUp">
+    				<center>
+    					<h1><b>Need Help?</b></h1>
+    				</center>
+    				<center>
+    				<a href="mailto:webmaster@example.com">
+    					<button>
+    						<h4><b>Shoot us an Email</b></h4>
+    					</button>
+    				</a></center>
+    			</div>
+    			<div class="col-md-4 col-sm-4 col-lg-4"></div>
+    		</div>
+    	</div>
+    </div>
+    <!-- footer brand -->
+    <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12 footerbrand text-center">
+    	<div class="container">
+    		<div class="row">
+    			<div class="col-md-4 col-sm-4 col-lg-4"></div>
+    			<div class="col-md-4 col-sm-4 col-lg-4">
+    				<center>
+    					<img src="img/logo-footer.png" class="logofooter" />
+    				</center>
+    			</div>
+    			<div class="col-md-4 col-sm-4 col-lg-4"></div>
+    		</div>
+
+    	</div>
+    </div>
+</body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/js/bootstrap.min.js"></script>
+
+</html>
     
 </body>
 </html>
