corrected some spelling

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     				<center>
     				<a href="mailto:webmaster@example.com">
     					<button>
-    						<h4><b>Shoot us an Email</b></h4>
+    						<h4><b>Shoot me an Email</b></h4>
     					</button>
     				</a></center>
     			</div>
