--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Random Page</title>
+    <title>Eclipsed</title>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <!-- Favicon -->
     <link rel="icon" href="img/favicon.png">
@@ -26,10 +26,10 @@
             <div class="row">
                 <!-- left section -->
                 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 wow slideInLeft">
-                    <center><img src="img/logo.png" class="logo" /></center>
+                    <center><img src="" class="logo" /></center>
                     <center>
-                        <h1> My Super Awesome App </h1>
-                        <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <h1> Eclipse </h1>
+                        <p class="text-center">Welcome to my page. This is where you can come to find info on my latest iOS app. This app will be the first time that I will also be making it avalible to Android users. <br /> Check out a simple example here -  <a href="http://tdk-eclipsed.io.s3-website-us-east-1.amazonaws.com/#/" class="mr- downloadbtn"><img src="img/applelogo.png"></a> <br />Stay tunded for more info...</p>
                     </center>
                 </div>
                 <!-- right section -->
