--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
     			<div class="col-md-4 col-sm-4 col-lg-4"></div>
     			<div class="col-md-4 col-sm-4 col-lg-4 wow bounceInUp">
     				<center>
-    					<h1><b>Need Help?</b></h1>
+    					<h1><b>Questions? Ideas?</b></h1>
     				</center>
     				<center>
-    				<a href="mailto:webmaster@example.com">
+    				<a href="mailto:jhgarrett1@icloud.com">
     					<button>
     						<h4><b>Shoot me an Email</b></h4>
     					</button>
@@ -174,7 +174,7 @@
     			<div class="col-md-4 col-sm-4 col-lg-4"></div>
     			<div class="col-md-4 col-sm-4 col-lg-4">
     				<center>
-    					<img src="img/logo-footer.png" class="logofooter" />
+    					
     				</center>
     			</div>
     			<div class="col-md-4 col-sm-4 col-lg-4"></div>
