--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <center><img src="" class="logo" /></center>
                     <center>
                         <h1> Eclipse </h1>
-                        <p class="text-center">Welcome to my page. This is where you can come to find info on my latest iOS app. This app will be the first time that I will also be making it avalible to Android users. <br /> Check out a simple example here -  <a href="http://tdk-eclipsed.io.s3-website-us-east-1.amazonaws.com/#/" class="mr- downloadbtn"><img src="img/applelogo.png"></a> <br />Stay tunded for more info...</p>
+                        <p class="text-center">Welcome to my page. This is where you can come to find info on my latest iOS app. This app will be the first time that I will also be making it avalible to Android users. <br /> Check out a simple example here - Click and drag instead of scrolling <a href="http://tdk-eclipsed.io.s3-website-us-east-1.amazonaws.com/#/" class="mr- downloadbtn"><img src="img/applelogo.png"></a> <br />Stay tunded for more info...</p>
                     </center>
                 </div>
                 <!-- right section -->
